--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 500px)  {
+@media screen and (min-width: 760px)  {
  p {
 font-size: 24pt;} 
 body {
@@ -25,7 +25,7 @@ border: 5px solid rgba(0, 0, 0, .4);
 }
 #parent {
   display:flex;
-  margin: 10px 20em
+  margin: 10px 20%
 }
 }
 @media screen and (max-width: 480px)  {
@@ -46,7 +46,7 @@ text-align: center;}
 .block1 {
   background:white;
   margin:10px;
-  width: 100%;
+  width: 300px;
  padding-top:30px;
                 padding-right: 30px;
                 padding-bottom: 30px;
