--- a/style.css
+++ b/style.css
@@ -57,15 +57,15 @@ border: 5px solid rgba(0, 0, 0, .4);
 background-image: url('360_07.png');
   margin:0px;
   width: 330px; 
-height: 377px
+height: 550px
 }
 .block1_2 {
-  background-image: url('360_07.png');
+  background: white;
  margin:0px;
   width: 100%;
-height: 377px;
+height: 550px;
 padding: 10px 10px;
-border: 0px solid rgba(0, 0, 0, .4);
+border: 5px solid rgba(0, 0, 0, .4);
  box-sizing: border-box;
 }
 .footer {
